Added a button to generate a new card

--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,7 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <button class="refresh-button">Generate a new card</button>
+  </body>
 </html>
